--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -149,7 +149,84 @@ body {
 	}
 }
 
+.footer {
+	background: $darkCyan;
 
+	.container {
+		border: 1px solid blue;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		position: relative;
+	}
+
+	.footer__cta {
+		// border: 1px dashed aqua;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 800px;
+		height: 280px;
+		background: #fff;
+		border-radius: 20px;
+		filter: drop-shadow(0px 3px 11px rgba(0,0,0,.10));
+		z-index: 20;
+		position: absolute;
+		top: -180px;
+
+		p {
+			color: $darkCyan;
+			font-size: 40px;
+			font-weight: 600;
+			font-family: 'Poppins', sans-serif;
+		}
+	}
+
+	.footer__cta-button {
+		background: $pink;
+		color: #fff;
+		font-size: 20px;
+		display: flex;
+		margin-top: 48px;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 400px;
+		height: 80px;
+		border: none;
+		border-radius: 50px;
+		filter: drop-shadow(0px 3px 11px rgba(0,0,0,.10));
+	}
+
+	.footer__main {
+		border: 1px solid $pink;
+		padding-top: 120px;
+		background: $darkCyan;
+		height: 418px;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+
+		.row {
+			 padding-top: 40px;
+		}
+
+		.col-4 {
+			border: 1px solid pink;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			// justify-content: ;
+			flex: 1;
+			color: #fff;
+			font-size: 12px;
+		}
+
+	}
+}
 
 // REMEMBER: There is 40px on bottom of hero section
 // W:790px H:555px
